--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,18 +3,45 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/var/www/html/Premier-TP-symfony/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/var/www/html/Premier-TP-symfony/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <section class="jumbotron text-center">
+        <div class="container">
+            <h1 class="jumbotron-heading">Notre super site e-Commerce</h1>
+            <p class="lead text-muted mb-0">Voici notre super version de site e-Commerce réalisée par Joëlle, Laura, Laurent, Teddy et Thomas</p>
+        </div>
+    </section>
+    <section class="container">
+        <div class="row">
+            <div class="col-12 col-md-9">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="/images/slide1.jpg" class="d-block w-100" alt="slide1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/images/slide2.jpg" class="d-block w-100" alt="slide2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/images/slide3.jpg" class="d-block w-100" alt="slide3">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+            <div class="col-8 offset-2 col-md-3">
+                // Coup de coeur
+            </div>
+        </div>
+    </section>
 {% endblock %}
