--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}E-commerçons bien ensemble{% endblock %}
 
 {% block body %}
     <section class="jumbotron text-center">
@@ -40,8 +40,18 @@
                 </div>
             </div>
             <div class="col-8 offset-2 col-md-3">
-                // Coup de coeur
+                <div class="card" style="max-width: 18rem;">
+                    <div class="card-header text-white bg-success mb-3">Top produit</div>
+                    <div class="card-body text-dark bg-white">
+                        <h5 class="card-title">Product title</h5>
+                    </div>
+                </div>
             </div>
+        </div>
+    </section>
+    <section class="container">
+        <div class="row">
+
         </div>
     </section>
 {% endblock %}
