Modif du footer

--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -1,9 +1,9 @@
-<footer >
+<footer class="text-light footer footer-expand-md footer-dark bg-dark">
     <div class="container">
         <div class="row">
             <div class="col-md-3 col-lg-4 col-xl-3">
                 <h5>A propos</h5>
-                <hr class="bg-dark mb-2 mt-0 d-inline-block mx-auto w-25">
+                <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
                 <p class="mb-0">
                     Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.
                 </p>
@@ -11,7 +11,7 @@
 
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto">
                 <h5>Informations</h5>
-                <hr class="bg-dark mb-2 mt-0 d-inline-block mx-auto w-25">
+                <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
                 <ul class="list-unstyled">
                     <li><a href="">Link 1</a></li>
                     <li><a href="">Link 2</a></li>
@@ -22,7 +22,7 @@
 
             <div class="col-md-3 col-lg-2 col-xl-2 mx-auto">
                 <h5>Others links</h5>
-                <hr class="bg-dark mb-2 mt-0 d-inline-block mx-auto w-25">
+                <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
                 <ul class="list-unstyled">
                     <li><a href="">Link 1</a></li>
                     <li><a href="">Link 2</a></li>
@@ -33,7 +33,7 @@
 
             <div class="col-md-4 col-lg-3 col-xl-3">
                 <h5>Contact</h5>
-                <hr class="bg-dark mb-2 mt-0 d-inline-block mx-auto w-25">
+                <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
                 <ul class="list-unstyled">
                     <li><i class="fa fa-home mr-2"></i> My company</li>
                     <li><i class="fa fa-envelope mr-2"></i> email@example.com</li>
