visuel contact version 1

--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -10,4 +10,15 @@
         </div>
     </section>
 
+
+<div class="container">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="{{ path ('home') }}">Accueil</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Contact</li>
+        </ol>
+    </nav>
+</div>
 {% endblock %}
+
+
