--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -68,7 +68,10 @@
                 <div class="card" style="max-width: 18rem;">
                     <div class="card-header text-white bg-primary mb-3"><i class="fa fa-trophy"></i> Meilleurs produits</div>
                     <div class="card-body text-dark bg-white">
-                        <h5 class="card-title">Product title</h5>
+                        <div class="col-md3">Produit 5</div>
+                        <div class="col-md3">Produit 6</div>
+                        <div class="col-md3">Produit 7</div>
+                        <div class="col-md3">Produit 8</div>
                     </div>
                 </div>
             </div>
