--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -50,7 +50,7 @@
         </div>
     </section>
     <section class="container">
-        <div class="row">
+        <div class="row" style="margin-top: 20px">
             <div class="col-12">
                 <div class="card" style="max-width: 18rem;">
                     <div class="card-header text-white bg-primary mb-3"><i class="fa fa-star"></i> Derniers produits</div>
@@ -63,7 +63,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row" style="margin-top: 20px;margin-bottom:20px">
             <div class="col-12">
                 <div class="card" style="max-width: 18rem;">
                     <div class="card-header text-white bg-primary mb-3"><i class="fa fa-trophy"></i> Meilleurs produits</div>
