--- a/templates/product/create.html.twig
+++ b/templates/product/create.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="container">
+    <div class="container my-5">
         <h1 class="my-4">Créer un produit</h1>
         {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
         {{ form_widget(form) }}
