--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -20,7 +20,7 @@
                     <a class="nav-link" href="product.html">Panier</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" href="./contact/contact.html.twig">Contact</a>
                 </li>
             </ul>
 
