--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -43,7 +43,7 @@
             </div>
             <div class="col-12 copyright mt-3">
                 <p class="float-left">
-                    <a href="#">Back to top</a>
+                    <a href="./home/index.html.twig">Back to top</a>
                 </p>
             </div>
         </div>
