--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="index.html">Ecommerce</a>
+        <a class="navbar-brand" href="index.html">E-commerce</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -14,7 +14,7 @@
                     <a class="nav-link" href="category.html">Categories</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="product.html">Produit</a>
+                    <a class="nav-link" href="product.html">Produits</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="product.html">Panier</a>
