product list --> edit, view, edit buttons

--- a/templates/product/list.html.twig
+++ b/templates/product/list.html.twig
@@ -11,7 +11,20 @@
                 <div class="card mb-4">
                     <div class="card-body">
                         <h3 class="card-title">{{ product.name }}</h3>
-                        <h5>{{ product.price / 100 }} &euro;</h5></div>
+                        <h5>{{ product.price / 100 }} &euro;</h5>
+                    </div>
+                    <div class="card-footer">
+                        <a href="{{ path('product_show', {'id': product.id}) }}" class="btn btn-primary btn-block">Voir le produit</a>
+                        <div class="text-center mt-2">
+                            <a href="{{ path('product_edit', {'id': product.id}) }}" class="btn btn-info">
+                                <i class="fas fa-pencil-alt"></i>
+                            </a>
+                            <form class="d-inline" method="post" action="{{ path('product_delete', {'id': product.id}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer {{ product.name }} ?')">
+                                <input type="hidden" name="token" value="{{ csrf_token('delete') }}" />
+                                <button class="btn btn-danger"><i class="fa fa-trash"></i></button>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
         {% endfor %}
