mock-up derniers produits sur page index

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -49,16 +49,64 @@
             </div>
         </div>
     </section>
-    <section class="container">
-        <div class="row" style="margin-top: 20px">
-            <div class="col-12">
-                <div class="card" style="max-width: 18rem;">
-                    <div class="card-header text-white bg-primary mb-3" style="text-transform: uppercase"><i class="fa fa-star"></i> Derniers produits</div>
-                    <div class="card-body text-dark bg-white">
-                        <div class="col-md3">Produit 1</div>
-                        <div class="col-md3">Produit 2</div>
-                        <div class="col-md3">Produit 3</div>
-                        <div class="col-md3">Produit 4</div>
+    <section class="container" style="margin-top: 20px">
+        <div class="card">
+            <div class="card-header text-white bg-primary mb-3" style="text-transform: uppercase"><i class="fa fa-star"></i> Derniers produits</div>
+            <div class="card-body text-dark bg-white">
+                <div class="row">
+                    <div class="card-deck">
+                        <div class="card">
+                            <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                            <div class="card-body">
+                                <h4 class="card-title"><a href="product.html" title="View Product">Produit 1</a></h4>
+                                <p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat id ratione illo totam accusantium doloribus sapiente consequatur, amet asperiores architecto!</p>
+                                <div class="row">
+                                    <div class="col-12">
+                                        <p class="btn btn-danger btn-block">prix en &euro;</p>
+                                        <a href="cart.html" class="btn btn-success btn-block">Ajout panier</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                            <div class="card-body">
+                                <h4 class="card-title"><a href="product.html" title="View Product">Produit 2</a></h4>
+                                <p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat id ratione illo totam accusantium doloribus sapiente consequatur, amet asperiores architecto!</p>
+                                <div class="row">
+                                    <div class="col-12">
+                                        <p class="btn btn-danger btn-block">prix en &euro;</p>
+                                        <a href="cart.html" class="btn btn-success btn-block">Ajout panier</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                            <div class="card-body">
+                                <h4 class="card-title"><a href="product.html" title="View Product">Produit 3</a></h4>
+                                <p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat id ratione illo totam accusantium doloribus sapiente consequatur, amet asperiores architecto!</p>
+                                <div class="row">
+                                    <div class="col-12">
+                                        <p class="btn btn-danger btn-block">prix en &euro;</p>
+                                        <a href="cart.html" class="btn btn-success btn-block">Ajout panier</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                            <div class="card-body">
+                                <h4 class="card-title"><a href="product.html" title="View Product">Produit 4</a></h4>
+                                <p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat id ratione illo totam accusantium doloribus sapiente consequatur, amet asperiores architecto!</p>
+                                <div class="row">
+                                    <div class="col-12">
+                                        <p class="btn btn-danger btn-block">prix en &euro;</p>
+                                        <a href="cart.html" class="btn btn-success btn-block">Ajout panier</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
