--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -6,21 +6,22 @@
         </button>
 
         <div class="collapse navbar-collapse justify-content-end" id="navbarsExampleDefault">
+            {% set route = app.request.attributes.get('_route') %}
             <ul class="navbar-nav m-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Accueil</a>
+                    <a class="nav-link" href="{{ path('home') }}">Accueil</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="category.html">Categories</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="product.html">Produit</a>
+                    <a class="nav-link" href="{{ path('product_list') }}">Produit</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="product.html">Panier</a>
+                    <a class="nav-link" href="panier.html">Panier</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./contact/contact.html.twig">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
 
