--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -1,7 +1,7 @@
-<footer class="text-light footer footer-expand-md footer-dark bg-dark">
+<footer class="text-light footer footer-expand-md footer-dark bg-dark ">
     <div class="container">
         <div class="row">
-            <div class="col-md-3 col-lg-4 col-xl-3">
+            <div class="col-md-3 col-lg-4 col-xl-3 my-3">
                 <h5>A propos</h5>
                 <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
                 <p class="mb-0">
@@ -9,7 +9,7 @@
                 </p>
             </div>
 
-            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto">
+            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto my-3">
                 <h5>Informations</h5>
                 <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
                 <ul class="list-unstyled">
@@ -20,7 +20,7 @@
                 </ul>
             </div>
 
-            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto">
+            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto my-3">
                 <h5>Others links</h5>
                 <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
                 <ul class="list-unstyled">
@@ -31,7 +31,7 @@
                 </ul>
             </div>
 
-            <div class="col-md-4 col-lg-3 col-xl-3">
+            <div class="col-md-4 col-lg-3 col-xl-3 my-3">
                 <h5>Contact</h5>
                 <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
                 <ul class="list-unstyled">
@@ -41,7 +41,7 @@
                     <li><i class="fa fa-print mr-2"></i> + 33 12 14 15 16</li>
                 </ul>
             </div>
-            <div class="col-12 copyright mt-3">
+            <div class="col-12 copyright mt-3 my-3">
                 <p class="float-left">
                     <a href="./home/index.html.twig">Back to top</a>
                 </p>
