--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -56,7 +56,7 @@
                 <div class="row">
                     <div class="card-deck">
                         <div class="card">
-                            <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                            <img class="card-img-top" src="/images/article1.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <h4 class="card-title"><a href="product.html" title="View Product">Produit 1</a></h4>
                                 <p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat id ratione illo totam accusantium doloribus sapiente consequatur, amet asperiores architecto!</p>
@@ -69,7 +69,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                            <img class="card-img-top" src="/images/article2.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <h4 class="card-title"><a href="product.html" title="View Product">Produit 2</a></h4>
                                 <p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat id ratione illo totam accusantium doloribus sapiente consequatur, amet asperiores architecto!</p>
@@ -82,7 +82,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                            <img class="card-img-top" src="/images/article3.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <h4 class="card-title"><a href="product.html" title="View Product">Produit 3</a></h4>
                                 <p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat id ratione illo totam accusantium doloribus sapiente consequatur, amet asperiores architecto!</p>
@@ -95,7 +95,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                            <img class="card-img-top" src="article4" alt="Card image cap">
                             <div class="card-body">
                                 <h4 class="card-title"><a href="product.html" title="View Product">Produit 4</a></h4>
                                 <p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat id ratione illo totam accusantium doloribus sapiente consequatur, amet asperiores architecto!</p>
