--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -95,7 +95,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <img class="card-img-top" src="article4" alt="Card image cap">
+                            <img class="card-img-top" src="/images/article4.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <h4 class="card-title"><a href="product.html" title="View Product">Produit 4</a></h4>
                                 <p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat id ratione illo totam accusantium doloribus sapiente consequatur, amet asperiores architecto!</p>
